@@ -1,3 +1,8 @@
+== (unreleased)
+
+* Make sure role(:foo) actually declares an (empty) role for :foo, even without server arguments [Jamis Buck]
+
+
 == 2.5.4 / 4 Feb 2009
 
 * When using rsync with the remote_cache strategy include -t switch to preserve file times [Kevin McCarthy]
